--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>Welcome [User]</h1>
+						<h1>Welcome {{username}}</h1>
 
 
 						<!-- <div class="mu-featured-slider-wrapper">
