--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
 
 						<div class="mu-featured-content">
 
-							<a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">About Us</a>
+							<a href="about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
 						</div>
 
 					</div>
