--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>About Us</title>
-    <link rel ="stylesheet" href="about.css">
+    <link rel ="stylesheet" href="assets/css/about.css">
     <h1>About Us</h1>
     <br>
     <br>
@@ -31,6 +31,6 @@
     <br>
     <br>
     <br>
-  <input type="button" id="goHome" value="Home">
+  <input type="button" id="goHome" value="Home" onclick="location.href='index.html'"/>
   </body>
 </html>
