--- a/templates/index.html
+++ b/templates/index.html
@@ -73,17 +73,18 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>Welcome {{username}}</h1>
+						<h1>Welcome {{username}}</h1> <br><br>
 
 
-						<!-- <div class="mu-featured-slider-wrapper">
+						<div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-								<p>I am <span>UI/UX Designer</span></p>
-								<p>I am <span>Web Developer</span></p>
-		   						<p>I am <span>Photographer</span></p>
+								<p>I am <span>a student</span></p>
+								<p>I am <span>busy with classes</span></p>
+                <p>I am <span> in need of fixing the speed on this</span></p>
+
 							</div>
 							<span id="typed"></span>
-						</div> -->
+						</div>
 
 						<div class="mu-featured-content">
 
