--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 		        <span class="icon-bar"></span>
 		      </button>
 
-		      <a class="navbar-brand" href="todolist.html">Classify</a>
+		      <a class="navbar-brand" href="index.html">Classify</a>
 
 
 		    </div>
