--- a/templates/settings.html
+++ b/templates/settings.html
@@ -9,7 +9,7 @@
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/slick.css" rel="stylesheet">
+    <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
