--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -9,7 +9,7 @@
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/slick.css" rel="stylesheet">
+    <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -105,6 +105,7 @@
               <h2 class="mu-heading-title">Todo List</h2>
               <span class="mu-header-dot"></span>
               <p>To Do</p>
+              <a type="submit" value="submit " class="mu-primary-btn view-my-work-btn">Submit</a>
             </div>
             <section id="content">
               <h1>To-Do List</h1>
