--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -105,10 +105,12 @@
               <h2 class="mu-heading-title">Todo List</h2>
               <span class="mu-header-dot"></span>
               <p>To Do</p>
-              <a type="submit" value="submit " class="mu-primary-btn view-my-work-btn">Submit</a>
+
             </div>
+
             <section id="content">
               <h1>To-Do List</h1>
+              <a type="submit" value="submit ">Submit</a>
               <ol contenteditable="true">
                 <li>Item 1</li>
                 <li>Item 2</li>
