--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
+    <link href="assets/css/slick.css" rel="stylesheet">
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -73,18 +73,18 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>Welcome {{username}}</h1> <br><br>
+						<h1>Welcome {{username}}</h1>
 
 
-						<div class="mu-featured-slider-wrapper">
+						<!-- <div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-								<p>I am <span>a student</span></p>
+								<!-- <p>I am <span>a student</span></p>
 								<p>I am <span>busy with classes</span></p>
-                <p>I am <span> in need of fixing the speed on this</span></p>
+                <p>I am <span> in need of fixing the speed on this</span></p> -->
 
-							</div>
+							<!-- </div>
 							<span id="typed"></span>
-						</div>
+						</div>  -->
 
 						<div class="mu-featured-content">
 
