--- a/templates/index.html
+++ b/templates/index.html
@@ -74,17 +74,18 @@
 				<div class="col-md-12">
 					<div class="mu-featured-area">
 						<h1>Welcome {{username}}</h1>
+            <br>
 
 
-						<!-- <div class="mu-featured-slider-wrapper">
+						<div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-								<!-- <p>I am <span>a student</span></p>
+								<p>I am <span>a student</span></p>
 								<p>I am <span>busy with classes</span></p>
-                <p>I am <span> in need of fixing the speed on this</span></p> -->
+                <p>I am <span> in need of fixing the speed on this</span></p>
 
-							<!-- </div>
+							</div>
 							<span id="typed"></span>
-						</div>  -->
+						</div>
 
 						<div class="mu-featured-content">
 
@@ -100,14 +101,14 @@
 
 	</main>
 
-	<!-- End main content -->
+	<!-- End main content
 
 
 	<!-- Start footer -->
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-
+          <p> Google CSSI 2019 </p>
 				</div>
 			</div>
 
