--- a/templates/settings.html
+++ b/templates/settings.html
@@ -220,8 +220,8 @@
                 <br>
                 <br>
                 <br>
-                <input type ="submit"  href= "index.html " value="Save and Go Home">
-                <br>
+<a href="index.html" class="mu-btn view-my-work-btn">Save & Go Home<a>
+                  <br>
               </form>
             </div>
 
