--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -110,7 +110,7 @@
 
             <section id="content">
               <h1>To-Do List</h1>
-              <a type="submit" value="submit ">Submit</a>
+              <a type="submit" value="submit" class="mu-btn view-my-work-btn">Submit</a>
               <ol contenteditable="true">
                 <li>Item 1</li>
                 <li>Item 2</li>
