--- a/templates/settings.html
+++ b/templates/settings.html
@@ -213,10 +213,22 @@
                 <br>
                 <br>
                 Display: <br>
-                <select name = "display">
-                  <option value = "dark_mode">Dark Mode</option>
-                  <option value = "light_mode">Light Mode</option>
-                </select>
+                <div class="toggleWrapper">
+                  <input type="checkbox" class="dn" id="dn"/>
+                  <label for="dn" class="toggle">
+                    <span class="toggle__handler">
+                      <span class="crater crater--1"></span>
+                      <span class="crater crater--2"></span>
+                      <span class="crater crater--3"></span>
+                    </span>
+                    <span class="star star--1"></span>
+                    <span class="star star--2"></span>
+                    <span class="star star--3"></span>
+                    <span class="star star--4"></span>
+                    <span class="star star--5"></span>
+                    <span class="star star--6"></span>
+                  </label>
+                </div>
                 <br>
                 <br>
                 <br>
@@ -258,14 +270,14 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
-			<div class="container">
-				<div class="mu-footer-area">
+  <footer id="mu-footer" role="contentinfo">
+      <div class="container">
+        <div class="mu-footer-area">
+          <p> Google CSSI 2019 </p>
+        </div>
+      </div>
 
-				</div>
-			</div>
-
-	</footer>
+  </footer>
 	<!-- End footer -->
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
