--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -127,7 +127,7 @@
                     <div class="row">
                       <div class="col-sm-4">
 
-
+<br><br><br><br>
                     </div>
                   </div>
                 </div>
@@ -151,14 +151,14 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
-			<div class="container">
-				<div class="mu-footer-area">
+  <footer id="mu-footer" role="contentinfo">
+      <div class="container">
+        <div class="mu-footer-area">
+          <p> Google CSSI 2019 </p>
+        </div>
+      </div>
 
-				</div>
-			</div>
-
-	</footer>
+  </footer>
 	<!-- End footer -->
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
