working with settings database

--- a/templates/health.html
+++ b/templates/health.html
@@ -104,7 +104,8 @@
             <div class="mu-contact-header">
               <h2 class="mu-heading-title">Health</h2>
               <span class="mu-header-dot"></span>
-              <p>healthy shit here</p>
+              <p>So you want to health?<br> Good Luck</p>
+
             </div>
 
             <div class="mu-contact-content">
