--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -110,7 +110,7 @@
 
             <section id="content">
               <h1>To-Do List</h1>
-              <a type="submit" value="submit" class="mu-btn view-my-work-btn">Submit</a>
+              <a id="button" type="submit" value="submit" class="mu-btn view-my-work-btn">Submit</a>
               <ol contenteditable="true">
                 <li>Item 1</li>
                 <li>Item 2</li>
@@ -127,7 +127,7 @@
                     <div class="row">
                       <div class="col-sm-4">
 
-<br><br><br><br>
+
                     </div>
                   </div>
                 </div>
@@ -151,14 +151,14 @@
 
 
 	<!-- Start footer -->
-  <footer id="mu-footer" role="contentinfo">
-      <div class="container">
-        <div class="mu-footer-area">
-          <p> Google CSSI 2019 </p>
-        </div>
-      </div>
+	<footer id="mu-footer" role="contentinfo">
+			<div class="container">
+				<div class="mu-footer-area">
 
-  </footer>
+				</div>
+			</div>
+
+	</footer>
 	<!-- End footer -->
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
