--- a/templates/settings.html
+++ b/templates/settings.html
@@ -217,6 +217,13 @@
                   <option value = "dark_mode">Dark Mode</option>
                   <option value = "light_mode">Light Mode</option>
                 </select>
+                SMS Number <br>
+                <input type = "text" name = "number" placeholder = "number">
+                <label class="check">
+                  <input type="checkbox"/>
+                  <div class="box"></div>
+                </label>
+                <br>
                 <br>
                 <br>
                 <br>
