about_us button fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
 
 						<div class="mu-featured-content">
 
-							<a href="/templates/about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
+							<a href="/../about_us.html" class="mu-primary-btn">About Us</a>
 						</div>
 
 					</div>
