--- a/templates/health.html
+++ b/templates/health.html
@@ -141,14 +141,14 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
-			<div class="container">
-				<div class="mu-footer-area">
+  <footer id="mu-footer" role="contentinfo">
+      <div class="container">
+        <div class="mu-footer-area">
+          <p> Google CSSI 2019 </p>
+        </div>
+      </div>
 
-				</div>
-			</div>
-
-	</footer>
+  </footer>
 	<!-- End footer -->
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
