--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -104,10 +104,10 @@
             <div class="mu-contact-header">
               <h2 class="mu-heading-title">Todo List</h2>
               <span class="mu-header-dot"></span>
-              <p>To Do</p>
+
 
             </div>
-
+            <br><br><br><br><br>
             <section id="content">
               <h1>To-Do List</h1>
               <a id="button" type="submit" value="submit" class="mu-btn view-my-work-btn">Submit</a>
@@ -118,6 +118,10 @@
                 <li>Item 4</li>
               </ol>
             </section>
+            <br><br><br><br><br>
+
+
+
             <div class="mu-contact-content">
               <div class="row">
 
@@ -126,7 +130,7 @@
 
                     <div class="row">
                       <div class="col-sm-4">
-
+                      
 
                     </div>
                   </div>
@@ -151,10 +155,10 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
+  <footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-
+          <p> Google CSSI 2019 </p>
 				</div>
 			</div>
 
@@ -164,6 +168,7 @@
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 <script type="text/javascript" src="assets/js/script.js"></script>
+
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
