--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -54,11 +54,16 @@ span b {
   font-size: 150%;
 }
 
-span d {
-  font-size: 110%;
+span c {
+  font-size: 150%;
 
 
 }
+
+span d{
+  font-size: 125%;
+}
+
 
 
 
@@ -75,8 +80,8 @@ img{
 }
 
 .pic{
-  height: 15%;
-  width: 15%;
+  height: 14%;
+  width: 14%;
 }
 
 body {
@@ -90,5 +95,5 @@ body {
   line-height: 1;
   margin: 10px;
   padding: 0.5;
-  color: #0b0f3b
+  color: #303030;
 }
