--- a/templates/health.html
+++ b/templates/health.html
@@ -57,7 +57,9 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="todolist.html">ToDo </a></li>
+      <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
+      <li><a href="weather.html">Weather</a></li>
       <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
