--- a/templates/index.html
+++ b/templates/index.html
@@ -57,8 +57,11 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="todolist.html">ToDo </a></li>
+      <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="settings.html">Settings</a></li>
+      <li><a href="weather.html">Weather</a></li>
+
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
 </div>
@@ -101,7 +104,7 @@
 
 	</main>
 
-	<!-- End main content
+	<!-- End main content -->
 
 
 	<!-- Start footer -->
