--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -128,9 +128,8 @@
                 <div class="col-md-12">
                   <div class="mu-contact-top">
 
-                    <div class="row">
-                      <div class="col-sm-4">
-                      
+                    
+
 
                     </div>
                   </div>
@@ -164,7 +163,10 @@
 
 	</footer>
 	<!-- End footer -->
-
+  <script async defer src="https://apis.google.com/js/api.js"
+    onload="this.onload=function(){};handleClientLoad()"
+    onreadystatechange="if (this.readyState === 'complete') this.onload()">
+  </script>
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 <script type="text/javascript" src="assets/js/script.js"></script>
