--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
 							<div class="mu-featured-slider" id="typed-strings">
 								<p>I am <span>a student</span></p>
 								<p>I am <span>busy with classes</span></p>
-                <p>I am <span> in need of fixing the speed on this</span></p>
+                <p>I am <span> ready to be organized</span></p>
 
 							</div>
 							<span id="typed"></span>
