--- a/templates/settings.html
+++ b/templates/settings.html
@@ -160,8 +160,8 @@
                   <option value = "thirtieth">30</option>
                   <option value = "thirty-first">31</option>
                 </select><br><br>
-                <br>  SMS Number <br> Tick to receive notifications <br>
-                  <input type = "text" name = "number" placeholder = "number"> <input type="checkbox" id="check" name="check"><br><br>
+                <br>  SMS Number for Move Reminders<br> How often? (in minutes)<br>
+                  <input type = "text" name = "number" placeholder = "SMS"> <input type = "text" name = "minute" placeholder = "minutes"><br><br>
 
                 <br>
                 Time Zone <br>
