--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -57,8 +57,11 @@
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="todolist.html">ToDo </a></li>
+      <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="settings.html">Settings</a></li>
+      <li><a href="weather.html">Weather</a></li>
+
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
 </div>
@@ -76,7 +79,7 @@
 						<h1>ToDo</h1>
 
 
-				
+
 
 						<div class="mu-featured-content">
 
@@ -105,7 +108,7 @@
               <!-- <input type="hidden" id="hidden" name ="custId" value="forDatastore" > -->
               <h1>To-Do List</h1>
               <form method="POST">
-              <input id="button" type="submit" value="submit" class="mu-btn view-my-work-btn">Submit</input>
+              <input id="button" type="submit" value="submit" class="mu-btn view-my-work-btn"></input>
               <ol id="list" contenteditable="true">
                 <li>Item 1</li>
                 <li>Item 2</li>
