--- a/templates/settings.html
+++ b/templates/settings.html
@@ -221,8 +221,8 @@
                     <option value = "happy">Happy</option>
                   </select>
                 </label><br><br>
-                Display: <br>
-                <div class="toggleWrapper">
+                <!-- Display: <br> -->
+                <!-- <div class="toggleWrapper">
                   <input type="checkbox" class="dn" id="dn"/>
                   <label for="dn" class="toggle">
                     <span class="toggle__handler">
@@ -237,16 +237,29 @@
                     <span class="star star--5"></span>
                     <span class="star star--6"></span>
                   </label>
-                </div>
+                </div> -->
 
               <br><br>
+              <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
 
+              <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
+             <script>
+                 function goPython(){
+                     $.ajax({
+                       url: "reminder.py",
+                      context: document.body
+                     }).done(function() {
+                      alert('finished python script');;
+                     });
+                 }
+             </script>
                 <br>
                 <br>
                 <br>
                 <br>
-                <a href="index.html" class="mu-btn view-my-work-btn">Save & Go Home<a>
+                <a href="index.html" onclick="goPython()" class="mu-btn view-my-work-btn">Save & Go Home<a>
+
                   <br>
               </form>
             </div>
