--- a/templates/nouser.html
+++ b/templates/nouser.html
@@ -4,12 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="861105091786-9e0vnb4ean8h0s8uopunnf58ogp89n39.apps.googleusercontent.com">
+
 
     <title>Classify</title>
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
+    <link href="assets/css/slick.css" rel="stylesheet">
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -76,94 +78,72 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>ToDo</h1>
+						<h1>Welcome Guest</h1>
+            <br>
 
 
+						<div class="mu-featured-slider-wrapper">
+							<div class="mu-featured-slider" id="typed-strings">
+								<p>Welcome to Classify</span></p>
+								<p>Youre not logged in!</span></p>
 
+							</div>
+							<span id="typed"></span>
+						</div>
 
 						<div class="mu-featured-content">
 
-							<!-- <a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">About Us</a>
-						</div> -->
-<!--
+              <div style="display: flex;
+  align-items: center;
+  justify-content: center;" id="my-signin2"></div>
+  <script>
+    function onSuccess(googleUser) {
+      console.log('Logged in as: ' + googleUser.getBasicProfile().getName());
+    }
+    function onFailure(error) {
+      console.log(error);
+    }
+    function renderButton() {
+      gapi.signin2.render('my-signin2', {
+        'scope': 'profile email',
+        'width': 240,
+        'height': 50,
+        'longtitle': true,
+        'theme': 'dark',
+        'onsuccess': onSuccess,
+        'onfailure': onFailure
+      });
+    }
+  </script>
+
 					</div>
 				</div>
-			</div> -->
+			</div>
 		</div>
 	</section>
-  <section id="mu-contact">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="mu-contact-area">
 
-            <div class="mu-contact-header">
-              <h2 class="mu-heading-title">Todo List</h2>
-              <span class="mu-header-dot"></span>
-              <p>To Do</p>
-
-            </div>
-
-            <section id="content">
-              <!-- <input type="hidden" id="hidden" name ="custId" value="forDatastore" > -->
-              <h1>To-Do List</h1>
-              <form method="POST">
-              <input id="button" type="submit" value="submit" class="mu-submit-btn" style="align:center;" ></input>
-              <ol id="list" contenteditable="true">
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-                <li>Item 4</li>
-              </ol>
-              <input type="hidden" id="hidden" name="hidden" value="forDatastore">
-            </form>
-            </section>
-            <div class="mu-contact-content">
-              <div class="row">
-<Br><br><Br><br>
-                <div class="col-md-12">
-                  <div class="mu-contact-top">
-
-                    <div class="row">
-                      <div class="col-sm-4">
-
-
-                    </div>
-                  </div>
-                </div>
-
-
-                  </div>
-                </div>
-
-              </div>
-            </div>
-            <!-- End Contact Content -->
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
 	</main>
 
+	<!-- End main content -->
 
 
 	<!-- Start footer -->
-  <footer id="mu-footer" role="contentinfo">
+	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
           <p> Google CSSI 2019 </p>
 				</div>
 			</div>
 
-	</footer> 
+	</footer>
 	<!-- End footer -->
+  <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-  <script type="text/javascript" src="assets/js/script.js"></script>
+<script type="text/javascript" src="assets/js/script.js"></script>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
