--- a/templates/nouser.html
+++ b/templates/nouser.html
@@ -92,8 +92,9 @@
 						</div>
 
 						<div class="mu-featured-content">
+              <a href="/" class="mu-primary-btn" data-onsuccess="onSignIn" id="signin">Sign In</a>
 
-              <div style="display: flex;
+              <!-- <div style="display: flex;
   align-items: center;
   justify-content: center;" id="my-signin2"></div>
   <script>
@@ -113,7 +114,15 @@
         'onsuccess': onSuccess,
         'onfailure': onFailure
       });
-    }
+    } -->
+    <script>
+    function onSignIn(googleUser) {
+      var profile = googleUser.getBasicProfile();
+      console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+      console.log('Name: ' + profile.getName());
+      console.log('Image URL: ' + profile.getImageUrl());
+      console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+}
   </script>
 
 					</div>
@@ -138,6 +147,8 @@
 
 	</footer>
 	<!-- End footer -->
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
+
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
 
 
