--- a/templates/settings.html
+++ b/templates/settings.html
@@ -238,6 +238,7 @@
                     <span class="star star--6"></span>
                   </label>
                 </div> -->
+                <a href="sms://+12538885523?body=I%27m%20interested%20in%20your%20product.%20Please%20contact%20me.">Send a SMS message</a>
 
               <br><br>
               <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
@@ -247,7 +248,7 @@
              <script>
                  function goPython(){
                      $.ajax({
-                       url: "reminder.py",
+                       url: "/../reminder.py",
                       context: document.body
                      }).done(function() {
                       alert('finished python script');;
