--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- <!-- <link href="assets/css/slick.css" rel="stylesheet"> --> -->
+    <!-- <!-- <link href="assets/css/slick.css" rel="stylesheet"> -->
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
     <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
@@ -73,28 +73,23 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="mu-featured-area">
-						<h1>Welcome [User]</h1>
+						<h1>Welcome {{username}}</h1>
 
-
-						<!-- <div class="mu-featured-slider-wrapper">
+<br><br>
+						<div class="mu-featured-slider-wrapper">
 							<div class="mu-featured-slider" id="typed-strings">
-<<<<<<< HEAD
-								<p>I am <span>UI/UX Designer</span></p>
-								<p>I am <span>Web Developer</span></p>
-		   						<p>I am <span>Photographer</span></p>
-=======
+
 								<p>I am <span> a student</span></p>
 								<p>I am <span> busy with classes</span></p>
                 <p>I am <span> ready to be organized</span></p>
 
->>>>>>> 1eea55112f212c4fd1d2dfc3ed2c8c52fc9d6d17
 							</div>
 							<span id="typed"></span>
-						</div> -->
+						</div>
 
 						<div class="mu-featured-content">
 
-							<a href="#mu-portfolio" class="mu-primary-btn view-my-work-btn">About Us</a>
+							<a href="../about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
 						</div>
 
 					</div>
