--- a/templates/index.html
+++ b/templates/index.html
@@ -56,9 +56,11 @@
     <div class="title">MENU</div>
     <ul class="nav">
       <li><a href="index.html">Home</a></li>
-      <li><a href="templates/todolist.html">ToDo </a></li>
+      <li><a href="todolist.html">ToDo </a></li>
+      <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
-      <li><a href="templatesettings.html">Settings</a></li>
+      <li><a href="weather.html">Weather</a></li>
+      <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
 </div>
