--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -203,7 +203,7 @@
                     'orderBy': 'startTime'
                   }).then(function(response) {
                     var events = response.result.items;
-                    appendPre('Upcoming events:');
+                    appendPre('Your upcoming events:');
 
                     if (events.length > 0) {
                       for (i = 0; i < events.length; i++) {
