--- a/templates/health.html
+++ b/templates/health.html
@@ -142,10 +142,10 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
+  <footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-
+          <p> Google CSSI 2019 </p>
 				</div>
 			</div>
 
