--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
 
 						<div class="mu-featured-content">
 
-							<a href="/about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
+							<a href="about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
 						</div>
 
 					</div>
@@ -107,10 +107,10 @@
 
 
 	<!-- Start footer -->
-	<footer id="mu-footer" role="contentinfo">
+  <footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-
+          <p> Google CSSI 2019 </p>
 				</div>
 			</div>
 
