--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -118,6 +118,9 @@
               <input type="hidden" id="hidden" name="hidden" value="forDatastore">
             </form>
             </section>
+            
+            <p>{{todolist}}</p>
+
             <div class="mu-contact-content">
               <div class="row">
 <Br><br><Br><br>
@@ -158,7 +161,7 @@
 				</div>
 			</div>
 
-	</footer> 
+	</footer>
 	<!-- End footer -->
 
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
