--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -108,7 +108,7 @@
               <!-- <input type="hidden" id="hidden" name ="custId" value="forDatastore" > -->
               <h1>To-Do List</h1>
               <form method="POST">
-              <input id="button" type="submit" value="submit" class="mu-submit-btn" style="align:center;" ></input>
+              <input id="button" type="submit" value="submit" class="mu-submit-btn" style="margin: auto;" ></input>
               <ol id="list" contenteditable="true">
                 <li>Item 1</li>
                 <li>Item 2</li>
@@ -118,7 +118,7 @@
               <input type="hidden" id="hidden" name="hidden" value="forDatastore">
             </form>
             </section>
-            
+
             <p>{{todolist}}</p>
 
             <div class="mu-contact-content">
