Added some stuff to 'Menu Bar' and fixed buttons

--- a/templates/about_us.html
+++ b/templates/about_us.html
@@ -138,6 +138,6 @@
       </p>
     </h4>
 
-  <input type="button" id="goHome" value="Home">
+  <input type="submit" id="goHome" value="Home" onclick="window.location='/index.html';"/>
   </body>
 </html>
