--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -59,8 +59,9 @@
       <li><a href="todolist.html">ToDo </a></li>
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
-      <li><a href="settings.html">Settings</a></li>
       <li><a href="weather.html">Weather</a></li>
+      <li><a href="about_us.html">About Us</a></li>
+      <li><a href="settings.html">Settings</a></li>
 
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
