--- a/templates/health.html
+++ b/templates/health.html
@@ -60,6 +60,7 @@
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="weather.html">Weather</a></li>
+      <li><a href="about_us.html">About Us</a></li>
       <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
