--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,7 @@
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="weather.html">Weather</a></li>
+      <li><a href="about_us.html">About Us</a></li>
       <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
@@ -91,7 +92,7 @@
 
 						<div class="mu-featured-content">
 
-							<a href="about_us.html" class="mu-primary-btn view-my-work-btn">About Us</a>
+							<a href="/todolist.html" class="mu-primary-btn">To Do List</a>
 						</div>
 
 					</div>
