--- a/templates/health.html
+++ b/templates/health.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style media="screen">
+    span a{
+      font-weight: bold;
+      }
+    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -60,7 +65,6 @@
       <li><a href="calendar.html">Calendar</a></li>
       <li><a href="health.html">Health</a></li>
       <li><a href="weather.html">Weather</a></li>
-      <li><a href="about_us.html">About Us</a></li>
       <li><a href="settings.html">Settings</a></li>
       <!-- <li><a href="#">Contact</a></li> -->
     </ul>
@@ -107,7 +111,22 @@
             <div class="mu-contact-header">
               <h2 class="mu-heading-title">Health</h2>
               <span class="mu-header-dot"></span>
-              <p>healthy shit here</p>
+              <p>
+                <span>
+              <p> <a> Sleep  </a> <br>
+According to the CDC young adults need at least seven hours of sleep per night. Although activities such as socializing and schoolwork may make this difficult, a lack of sleep has many consequences such as lack of productivity, caffeine dependencies and more.
+<br> <br>
+<a> Exercise </a> <br>
+Did you know that high GPAs and exercise are linked? Elevated moods and lower stress levels are just the half of the reasons why. It is recommended for university-aged students to exercise at least two hours per week at the bare minimum but the more they do the better. <br> <br>
+<a> Healthy Eating </a><br>
+A balanced diet contributes significantly to one’s well-being. Refer to a food guide for serving recommendations.
+<br> <br>
+<a> Drinking Water </a><br>
+Our bodies are almost entirely made up of water. So why not replenish it? Adults should drink at least eight ounces of water every day. Water is much healthier than other beverage alternatives which are often high in sugar and calories. </p>
+          </div>
+        </span>
+
+              </p>
             </div>
 
             <div class="mu-contact-content">
@@ -143,10 +162,10 @@
 
 
 	<!-- Start footer -->
-  <footer id="mu-footer" role="contentinfo">
+	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-          <p> Google CSSI 2019 </p>
+
 				</div>
 			</div>
 
