--- a/templates/nouser.html
+++ b/templates/nouser.html
@@ -92,7 +92,7 @@
 						</div>
 
 						<div class="mu-featured-content">
-              <a href="/" class="mu-primary-btn" data-onsuccess="onSignIn" id="signin"> Sign In </a>
+              <a href="/_ah/login?continue=http%3A//localhost%3A8080/" class="mu-primary-btn" data-onsuccess="onSignIn" id="signin"> Sign In </a>
 
               <!-- <div style="display: flex;
   align-items: center;
