--- a/templates/nouser.html
+++ b/templates/nouser.html
@@ -92,7 +92,8 @@
 						</div>
 
 						<div class="mu-featured-content">
-              <a href="/" class="mu-primary-btn" data-onsuccess="onSignIn" id="signin"> Sign In </a>
+              <a href="{{login}}" class="mu-primary-btn" data-onsuccess="onSignIn" id="signin"> Sign In </a>
+
 
               <!-- <div style="display: flex;
   align-items: center;
