--- a/templates/health.html
+++ b/templates/health.html
@@ -122,10 +122,16 @@ Did you know that high GPAs and exercise are linked? Elevated moods and lower st
 A balanced diet contributes significantly to one’s well-being. Refer to a food guide for serving recommendations.
 <br> <br>
 <a> Drinking Water </a><br>
-Our bodies are almost entirely made up of water. So why not replenish it? Adults should drink at least eight ounces of water every day. Water is much healthier than other beverage alternatives which are often high in sugar and calories. </p>
-          </div>
-        </span>
+Our bodies are almost entirely made up of water. So why not replenish it? Adults should drink at least eight ounces of water every day. Water is much healthier than other beverage alternatives which are often high in sugar and calories. <br><br><br></p>
+</div> <br><br><br>
+        </span> <br><br><br>
+        <button onclick="myFunction()" class="mu-move-btn">Remind Me to Move!</button>
 
+        <script>
+        function myFunction() {
+          alert("Reminder to Move! Stand Up, drink water, stretch");
+        }
+        </script>
               </p>
             </div>
 
