--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -449,6 +449,27 @@ input[type="submit"]{
 	transition: all 0.5s;
 
 }
+.mu-move-btn {
+	background-color: #2FC5BA;
+	border-radius: 4px;
+	border: 2px solid #ffffff;
+	color: #fff;
+	display: inline-block;
+	font-size: 14px;
+	font-weight: 700;
+	letter-spacing: 1.5px;
+	padding: 12px 35px;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  display: block;
+  max-width: 300px;
+  margin: auto;
+}
 
 .mu-submit-btn {
 	background-color: transparent;
